fix: more dark mode style adjusts for all necessary pages and scripts

--- a/src/styles/tailwind/output.css
+++ b/src/styles/tailwind/output.css
@@ -15,6 +15,7 @@
     --color-orange-400: oklch(75% 0.183 55.934);
     --color-orange-500: oklch(70.5% 0.213 47.604);
     --color-orange-600: oklch(64.6% 0.222 41.116);
+    --color-orange-900: oklch(40.8% 0.123 38.172);
     --color-yellow-400: oklch(85.2% 0.199 91.936);
     --color-yellow-500: oklch(79.5% 0.184 86.047);
     --color-gray-50: oklch(98.5% 0.002 247.839);
@@ -246,6 +247,9 @@
   .left-0\.5 {
     left: calc(var(--spacing) * 0.5);
   }
+  .left-1 {
+    left: calc(var(--spacing) * 1);
+  }
   .left-1\/2 {
     left: calc(1/2 * 100%);
   }
@@ -441,11 +445,21 @@
   .flex-1 {
     flex: 1;
   }
+  .flex-shrink {
+    flex-shrink: 1;
+  }
   .flex-shrink-0 {
     flex-shrink: 0;
   }
   .flex-grow {
     flex-grow: 1;
+  }
+  .border-collapse {
+    border-collapse: collapse;
+  }
+  .-translate-x-1 {
+    --tw-translate-x: calc(var(--spacing) * -1);
+    translate: var(--tw-translate-x) var(--tw-translate-y);
   }
   .-translate-x-1\/2 {
     --tw-translate-x: calc(calc(1/2 * 100%) * -1);
@@ -468,6 +482,9 @@
   }
   .cursor-pointer {
     cursor: pointer;
+  }
+  .resize {
+    resize: both;
   }
   .grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
@@ -744,6 +761,9 @@
   .text-yellow-500 {
     color: var(--color-yellow-500);
   }
+  .underline {
+    text-decoration-line: underline;
+  }
   .opacity-50 {
     opacity: 50%;
   }
@@ -769,6 +789,10 @@
   .shadow-sm {
     --tw-shadow: 0 1px 3px 0 var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 1px 2px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+  }
+  .outline {
+    outline-style: var(--tw-outline-style);
+    outline-width: 1px;
   }
   .transition {
     transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to, opacity, box-shadow, transform, translate, scale, rotate, filter, -webkit-backdrop-filter, backdrop-filter, display, content-visibility, overlay, pointer-events;
@@ -928,6 +952,11 @@
       border-color: var(--color-gray-500);
     }
   }
+  .dark\:border-orange-500 {
+    .dark & {
+      border-color: var(--color-orange-500);
+    }
+  }
   .dark\:bg-black {
     .dark & {
       background-color: var(--color-black);
@@ -946,6 +975,21 @@
   .dark\:bg-gray-800 {
     .dark & {
       background-color: var(--color-gray-800);
+    }
+  }
+  .dark\:bg-orange-300 {
+    .dark & {
+      background-color: var(--color-orange-300);
+    }
+  }
+  .dark\:bg-orange-500 {
+    .dark & {
+      background-color: var(--color-orange-500);
+    }
+  }
+  .dark\:bg-orange-900 {
+    .dark & {
+      background-color: var(--color-orange-900);
     }
   }
   .dark\:text-gray-200 {
@@ -968,9 +1012,19 @@
       color: var(--color-orange-300);
     }
   }
+  .dark\:text-orange-400 {
+    .dark & {
+      color: var(--color-orange-400);
+    }
+  }
   .dark\:text-white {
     .dark & {
       color: var(--color-white);
+    }
+  }
+  .dark\:text-yellow-500 {
+    .dark & {
+      color: var(--color-yellow-500);
     }
   }
   .dark\:hover\:bg-gray-700 {
@@ -1106,6 +1160,11 @@
   inherits: false;
   initial-value: 0 0 #0000;
 }
+@property --tw-outline-style {
+  syntax: "*";
+  inherits: false;
+  initial-value: solid;
+}
 @property --tw-duration {
   syntax: "*";
   inherits: false;
@@ -1155,6 +1214,7 @@
       --tw-ring-offset-width: 0px;
       --tw-ring-offset-color: #fff;
       --tw-ring-offset-shadow: 0 0 #0000;
+      --tw-outline-style: solid;
       --tw-duration: initial;
       --tw-scale-x: 1;
       --tw-scale-y: 1;
